@@ -1,0 +1,10 @@
+# $Id: cpu-hppa.mk,v 1.1 2005/04/24 21:14:21 manuelbi Exp $
+#
+# Configuration for HP PA-RISC CPUs. EXPERIMENTAL AND UNTESTED
+
+# Big or little endian?
+BIG_ENDIAN:=true
+
+# Default build flavour.
+OPENMSX_FLAVOUR?=opt
+
