@@ -1,0 +1,10 @@
+# $Id: cpu-ia64.mk,v 1.1 2005/04/24 21:14:21 manuelbi Exp $
+#
+# Configuration for Intel's 64-bit CPUs. EXPERIMENTAL AND UNTESTED
+
+# Big or little endian?
+BIG_ENDIAN:=false
+
+# Default build flavour.
+OPENMSX_FLAVOUR?=opt
+
