@@ -1,0 +1,10 @@
+# $Id: cpu-m86k.mk,v 1.1 2005/04/24 21:14:21 manuelbi Exp $
+#
+# Configuration for the Motorola 860x0 family. EXPERIMENTAL AND UNTESTED
+
+# Big or little endian?
+BIG_ENDIAN:=true
+
+# Default build flavour.
+OPENMSX_FLAVOUR?=opt
+
