@@ -1,0 +1,10 @@
+# $Id: cpu-mips.mk,v 1.1 2005/04/24 21:14:21 manuelbi Exp $
+#
+# Configuration for MIPS (Big-Endian) CPUs. EXPERIMENTAL AND UNTESTED
+
+# Big or little endian?
+BIG_ENDIAN:=true
+
+# Default build flavour.
+OPENMSX_FLAVOUR?=opt
+
