@@ -1,0 +1,10 @@
+# $Id: cpu-sparc.mk,v 1.1 2005/04/19 18:42:11 manuelbi Exp $
+#
+# Configuration for sparc and sparc64 CPUs.
+
+# Big or little endian?
+BIG_ENDIAN:=true
+
+# Default build flavour.
+OPENMSX_FLAVOUR?=opt
+
